--- a/movie_app/package.json
+++ b/movie_app/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "json-server --watch db.json",
+    "dev": "json-server db.json --port 8080 --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
